<resources>
    <string name="app_name">MediHealth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="view_content">View Content</string>
    <string name="class_name">Class Name</string>
    <string name="description">Description</string>
    <string name="stop_audio_file">Stop Audio File</string>
    <string name="play_audio_file">Play Audio File</string>
    <string name="build_number">Build Number:</string>
    <string name="build_version">Build Version:</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="setting_info">Setting Info</string>
    <string name="class_list">Class List</string>
</resources>