...
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewClassName" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:text="@string/play_audio_file"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewClassContent"
            app:layout_constraintRight_toLeftOf="@+id/btnStop"
            />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
