<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ClassFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ClassList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:id="@+id/Class"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Class"-->
<!--        android:textSize="36sp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>